--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
         <tr class="file">
             <td></td>
             <td>
-                <a href="README">
+                <a href="README.md">
                 
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use xlink:href="#license" class=""></use></svg>
                     <span class="name">README</span>
