--- a/index.html
+++ b/index.html
@@ -1,36 +1,19 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
 <title>Index of /</title>
-<body>
-<style>
-<!--
-body         { font-family: Courier New; font-size: 11pt; color: #00FF00; background-color: 
-               #000000 }
-a            { color: #00FF00 }
-a:hover      { color: #FF0000 }
--->
-</style>
+<META HTTP-EQUIV="Refresh" CONTENT="5; URL=https://oirtas.owobiw.com">
+<META NAME="robots" CONTENT="noindex, nofollow" />
 </head>
-<body><font color="#FF0000">
+<body>
 <pre>
-  _____         _          _         __          __ _  _                             
- / ____|       | |        (_)        \ \        / /(_)| |                            
-| (___    __ _ | |_  _ __  _   ___    \ \  /\  / /  _ | |__    ___  __      __  ___  
- \___ \  / _` || __|| '__|| | / _ \    \ \/  \/ /  | || '_ \  / _ \ \ \ /\ / / / _ \ 
- ____) || (_| || |_ | |   | || (_) |    \  /\  /   | || |_) || (_) | \ V  V / | (_) |
-|_____/  \__,_| \__||_|   |_| \___/      \/  \/    |_||_.__/  \___/   \_/\_/   \___/                                                                              
+__________________________________________________________________________________________
+      __                                        _      _
+    /    )                        ,             |  |  /     ,    /
+----\---------__---_/_----)__----------__-------|-/|-/----------/__-----__-------------__-
+     \      /   )  /     /   )  /    /   )      |/ |/     /    /   )  /   ) | /| /   /   )
+_(____/____(___(__(_ ___/______/____(___/_______/__|_____/____(___/__(___/__|/_|/___(___/_
 </pre>
-<ul><li><a href="OLD_TOKET/"> OLD_TOKET/</a></li>
-<li><a href="TOKET_1/"> TOKET_1/</a></li>
-<li><a href="TOKET_2/"> TOKET_2/</a></li>
-<li><a href="TOKET_3/"> TOKET_3/</a></li>
-<li><a href="TOKET_4/"> TOKET_4/</a></li>
-<li><a href="TOKET_5/"> TOKET_5/</a></li>
-<li><a href="TOKET_6/"> TOKET_6/</a></li>
-<li><a href="TOKET_7/"> TOKET_7/</a></li>
-<li><a href="new-newbies/"> new-newbies/</a></li>
-<li><a href="newbies/"> newbies/</a></li>
-</ul>
-<pre>talk less do more - take a cup coffee and enjoy reading</pre>
-</body></html>
+
+talk less do more - take a cup coffee and enjoy reading
+</body>
+</html>
