--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <head>
 <title>Index of /</title>
 <META HTTP-EQUIV="Refresh" CONTENT="5; URL=https://oirtas.owobiw.com">
+<META NAME="robots" CONTENT="noindex, nofollow" />
 </head>
 <body>
 <pre>
-__________________________________________________________________________________________
-      __                                        _      _
-    /    )                        ,             |  |  /     ,    /
-----\---------__---_/_----)__----------__-------|-/|-/----------/__-----__-------------__-
-     \      /   )  /     /   )  /    /   )      |/ |/     /    /   )  /   ) | /| /   /   )
-_(____/____(___(__(_ ___/______/____(___/_______/__|_____/____(___/__(___/__|/_|/___(___/_
+
+_______         _______ ___.   .__         
+\   _  \__  _  _\   _  \\_ |__ |__|_  _  __
+/  /_\  \ \/ \/ /  /_\  \| __ \|  \ \/ \/ /
+\  \_/   \     /\  \_/   \ \_\ \  |\     / 
+ \_____  /\/\_/  \_____  /___  /__| \/\_/  
+       \/              \/    \/            
+
+</pre>
+
 
 
 talk less do more - take a cup coffee and enjoy reading
-</pre>
 </body>
 </html>
